2008-03-03  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src (_get_next_token): Where the /incorrect/ flag
	is set are changed (HTML5 revision 1305).

2008-03-02  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Raise a parse error for |<span ===>| (HTML5 revision
	1292).  Entities are not parsed in comment-like part in RCDATA
	elements (HTML5 revision 1294).  Allow bare & at the end
	of attribute value literals (HTML5 revision 1296).  More
	quirks mode doctypes (HTML5 revision 1302).  Requires spaces
	between attributes and ban attribute names or unquoted
	attribute values containing single or double quotes (HTML5
	revision 1303).

2008-03-02  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm: Typo fixed.  Don't raise "character encoding"
	and related errors unless it is an HTML document (though the spec
	is unclear on whether it is applied to XHTML document).

	* HTML.pm (%HTMLAttrStatus): WF2 repetition model attributes
	are added.

2008-03-02  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: s/local_name/manakai_local_name/g.

2008-03-01  Wakaba  <wakaba@suika.fam.cx>

	* _NamedEntityList.pm: Updated (HTML5 revision 1286).

	* HTML.pm.src: |charset| in |content| attribute is 
	case-insensitive (HTML5 revision 1270).

2008-02-26  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm: New status constants are added.
	($ElementDefault): |status| added.
	(check_element): Err for non-standard or deprecated elements.
	(_attr_status_info): For non-standard or deprecated attributes.

2008-02-24  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm (_attr_status_info): New internal method.

2008-02-24  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm (check_element): Element standardized
	status information is now dispatched.

2008-02-24  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm (check_element): Fix |del|-and-significant
	problem by adding some more arguments.

2008-02-24  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm (check_element): Use context of