@@ -1,6 +1,6 @@
 package Whatpm::HTML;
 use strict;
-our $VERSION=do{my @r=(q$Revision: 1.74 $=~/\d+/g);sprintf "%d."."%02d" x $#r,@r};
+our $VERSION=do{my @r=(q$Revision: 1.75 $=~/\d+/g);sprintf "%d."."%02d" x $#r,@r};
 use Error qw(:try);
 
 ## ISSUE:
@@ -346,7 +346,7 @@ sub _initialize_tokenizer ($) {
 ##   ->{tag_name} (START_TAG_TOKEN, END_TAG_TOKEN)
 ##   ->{public_identifier} (DOCTYPE_TOKEN)
 ##   ->{system_identifier} (DOCTYPE_TOKEN)
-##   ->{correct} == 1 or 0 (DOCTYPE_TOKEN)
+##   ->{quirks} == 1 or 0 (DOCTYPE_TOKEN): "force-quirks" flag
 ##   ->{attributes} isa HASH (START_TAG_TOKEN, END_TAG_TOKEN)
 ##        ->{name}
 ##        ->{value}
@@ -1447,7 +1447,7 @@ sub _get_next_token ($) {
         $self->{state} = DATA_STATE;
         !!!next-input-character;
 
-        !!!emit ({type => DOCTYPE_TOKEN}); # incorrect
+        !!!emit ({type => DOCTYPE_TOKEN, quirks => 1});
 
         redo A;
       } elsif ($self->{next_input_character} == -1) { 
@@ -1455,14 +1455,15 @@ sub _get_next_token ($) {
         $self->{state} = DATA_STATE;
         ## reconsume
 
-        !!!emit ({type => DOCTYPE_TOKEN}); # incorrect
+        !!!emit ({type => DOCTYPE_TOKEN, quirks => 1});
 
         redo A;
       } else {
         $self->{current_token}
             = {type => DOCTYPE_TOKEN,
                name => chr ($self->{next_input_character}),
-               correct => 1};
+               #quirks => 0,
+              };
 ## ISSUE: "Set the token's name name to the" in the spec
         $self->{state} = DOCTYPE_NAME_STATE;
         !!!next-input-character;
@@ -1490,7 +1491,7 @@ sub _get_next_token ($) {
         $self->{state} = DATA_STATE;
         ## reconsume
 
-        delete $self->{current_token}->{correct};
+        $self->{current_token}->{quirks} = 1;
         !!!emit ($self->{current_token}); # DOCTYPE
 
         redo A;
@@ -1522,7 +1523,7 @@ sub _get_next_token ($) {
         $self->{state} = DATA_STATE;
         ## reconsume
 
-        delete $self->{current_token}->{correct};
+        $self->{current_token}->{quirks} = 1;
         !!!emit ($self->{current_token}); # DOCTYPE
 
         redo A;
@@ -1586,7 +1587,7 @@ sub _get_next_token ($) {
       }
 
       !!!parse-error (type => 'string after DOCTYPE name');
-      delete $self->{current_token}->{correct};
+      $self->{current_token}->{quirks} = 1;
 
       $self->{state} = BOGUS_DOCTYPE_STATE;
       # next-input-character is already done
@@ -1615,7 +1616,7 @@ sub _get_next_token ($) {
         $self->{state} = DATA_STATE;
         !!!next-input-character;
 
-        delete $self->{current_token}->{correct};
+        $self->{current_token}->{quirks} = 1;
         !!!emit ($self->{current_token}); # DOCTYPE
 
         redo A;
@@ -1625,13 +1626,13 @@ sub _get_next_token ($) {
         $self->{state} = DATA_STATE;
         ## reconsume
 
-        delete $self->{current_token}->{correct};
+        $self->{current_token}->{quirks} = 1;
         !!!emit ($self->{current_token}); # DOCTYPE
 
         redo A;
       } else {
         !!!parse-error (type => 'string after PUBLIC');
-        delete $self->{current_token}->{correct};
+        $self->{current_token}->{quirks} = 1;
 
         $self->{state} = BOGUS_DOCTYPE_STATE;
         !!!next-input-character;
@@ -1648,7 +1649,7 @@ sub _get_next_token ($) {
         $self->{state} = DATA_STATE;
         !!!next-input-character;
 
-        delete $self->{current_token}->{correct};
+        $self->{current_token}->{quirks} = 1;
         !!!emit ($self->{current_token}); # DOCTYPE
 
         redo A;
@@ -1658,7 +1659,7 @@ sub _get_next_token ($) {
         $self->{state} = DATA_STATE;
         ## reconsume
 
-        delete $self->{current_token}->{correct};
+        $self->{current_token}->{quirks} = 1;
         !!!emit ($self->{current_token}); # DOCTYPE
 
         redo A;
@@ -1680,7 +1681,7 @@ sub _get_next_token ($) {
         $self->{state} = DATA_STATE;
         !!!next-input-character;
 
-        delete $self->{current_token}->{correct};
+        $self->{current_token}->{quirks} = 1;
         !!!emit ($self->{current_token}); # DOCTYPE
 
         redo A;
@@ -1690,7 +1691,7 @@ sub _get_next_token ($) {
         $self->{state} = DATA_STATE;
         ## reconsume
 
-        delete $self->{current_token}->{correct};
+        $self->{current_token}->{quirks} = 1;
         !!!emit ($self->{current_token}); # DOCTYPE
 
         redo A;
@@ -1732,13 +1733,13 @@ sub _get_next_token ($) {
         $self->{state} = DATA_STATE;
         ## reconsume
 
-        delete $self->{current_token}->{correct};
+        $self->{current_token}->{quirks} = 1;
         !!!emit ($self->{current_token}); # DOCTYPE
 
         redo A;
       } else {
         !!!parse-error (type => 'string after PUBLIC literal');
-        delete $self->{current_token}->{correct};
+        $self->{current_token}->{quirks} = 1;
 
         $self->{state} = BOGUS_DOCTYPE_STATE;
         !!!next-input-character;
@@ -1767,7 +1768,7 @@ sub _get_next_token ($) {
         $self->{state} = DATA_STATE;
         !!!next-input-character;
 
-        delete $self->{current_token}->{correct};
+        $self->{current_token}->{quirks} = 1;
         !!!emit ($self->{current_token}); # DOCTYPE
 
         redo A;
@@ -1777,13 +1778,13 @@ sub _get_next_token ($) {
         $self->{state} = DATA_STATE;
         ## reconsume
 
-        delete $self->{current_token}->{correct};
+        $self->{current_token}->{quirks} = 1;
         !!!emit ($self->{current_token}); # DOCTYPE
 
         redo A;
       } else {
         !!!parse-error (type => 'string after SYSTEM');
-        delete $self->{current_token}->{correct};
+        $self->{current_token}->{quirks} = 1;
 
         $self->{state} = BOGUS_DOCTYPE_STATE;
         !!!next-input-character;
@@ -1800,7 +1801,7 @@ sub _get_next_token ($) {
         $self->{state} = DATA_STATE;
         !!!next-input-character;
 
-        delete $self->{current_token}->{correct};
+        $self->{current_token}->{quirks} = 1;
         !!!emit ($self->{current_token}); # DOCTYPE
 
         redo A;
@@ -1810,7 +1811,7 @@ sub _get_next_token ($) {
         $self->{state} = DATA_STATE;
         ## reconsume
 
-        delete $self->{current_token}->{correct};
+        $self->{current_token}->{quirks} = 1;
         !!!emit ($self->{current_token}); # DOCTYPE
 
         redo A;
@@ -1832,7 +1833,7 @@ sub _get_next_token ($) {
         $self->{state} = DATA_STATE;
         !!!next-input-character;
 
-        delete $self->{current_token}->{correct};
+        $self->{current_token}->{quirks} = 1;
         !!!emit ($self->{current_token}); # DOCTYPE
 
         redo A;
@@ -1842,7 +1843,7 @@ sub _get_next_token ($) {
         $self->{state} = DATA_STATE;
         ## reconsume
 
-        delete $self->{current_token}->{correct};
+        $self->{current_token}->{quirks} = 1;
         !!!emit ($self->{current_token}); # DOCTYPE
 
         redo A;
@@ -1874,13 +1875,13 @@ sub _get_next_token ($) {
         $self->{state} = DATA_STATE;
         ## reconsume
 
-        delete $self->{current_token}->{correct};
+        $self->{current_token}->{quirks} = 1;
         !!!emit ($self->{current_token}); # DOCTYPE
 
         redo A;
       } else {
         !!!parse-error (type => 'string after SYSTEM literal');
-        #delete $self->{current_token}->{correct};
+        #$self->{current_token}->{quirks} = 1;
 
         $self->{state} = BOGUS_DOCTYPE_STATE;
         !!!next-input-character;
@@ -2154,7 +2155,7 @@ sub _tree_construction_initial ($) {
       ## ISSUE: internalSubset = null??
       $self->{document}->append_child ($doctype);
       
-      if (not $token->{correct} or $doctype_name ne 'HTML') {
+      if ($token->{quirks} or $doctype_name ne 'HTML') {
         $self->{document}->manakai_compat_mode ('quirks');
       } elsif (defined $token->{public_identifier}) {
         my $pubid = $token->{public_identifier};
@@ -5639,4 +5640,4 @@ package Whatpm::HTML::RestartParser;
 push our @ISA, 'Error';
 
 1;
-# $Date: 2008/03/02 23:51:00 $
+# $Date: 2008/03/03 00:13:22 $
