@@ -1,7 +1,7 @@
 1..420
 # Running under perl version 5.008007 for linux
-# Current time local: Mon Mar  3 08:49:15 2008
-# Current time GMT:   Sun Mar  2 23:49:15 2008
+# Current time local: Mon Mar  3 09:10:57 2008
+# Current time GMT:   Mon Mar  3 00:10:57 2008
 # Using Test.pm version 1.25
 # t/tokenizer/test1.test
 ok 1
