@@ -1,5 +1,9 @@
 2008-03-03  Wakaba  <wakaba@suika.fam.cx>
 
+	* HTML-tokenizer.t: s/correct/force-quirks/.
+
+2008-03-03  Wakaba  <wakaba@suika.fam.cx>
+
 	* tokenizer-test-1.test: New tests on trailing garbage
 	after SYSTEM literal (HTML5 revision 1306) are added.
 
