@@ -1,5 +1,10 @@
 2008-03-03  Wakaba  <wakaba@suika.fam.cx>
 
+	* HTML.pm.src: Flag name changed: s/correct/force-quirks/g (HTML5
+	revision 1307).
+
+2008-03-03  Wakaba  <wakaba@suika.fam.cx>
+
 	* HTML.pm.src (_get_next_token): Where the /incorrect/ flag
 	is set are changed (HTML5 revision 1305).
 
